--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,55 @@
+@import './null.css';
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --theme-color: #646cff;
+  --theme-color-hover: #535bf2;
+  --text-color: rgba(255, 255, 255, 0.87);
+  --back-color: #242424;
+  --helper-back-color: #333;
+  --helper-back-color-hover: #444;
+  --btn-back-color: #1a1a1a;
 }
 
+:root.light {
+  --text-color: #213547;
+  --back-color: #ffffff;
+  --helper-back-color: #f0f0f0;
+  --helper-back-color-hover: #e0e0e0;
+  --btn-back-color: #edebeb;
+}
+#root {
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--theme-color);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--theme-color-hover);
 }
 
 body {
   margin: 0;
+  color: var(--text-color);
+  background-color: var(--back-color);
 }
 
 h1 {
@@ -31,24 +57,14 @@ h1 {
   line-height: 1.1;
 }
 
-#app {
+.app {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+  padding-top: 2.5em;
 }
 
 button {
@@ -58,12 +74,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--btn-back-color);
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--theme-color);
 }
 button:focus,
 button:focus-visible {
@@ -81,4 +97,74 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#theme-toggle {
+  /* position: fixed; */
+  top: 1rem;
+  right: 1rem;
+}
+
+.details {
+  display: grid;
+  gap: 1.2em;
+  grid-template-columns: 1fr 1fr;
+}
+
+.details .wide {
+  grid-column: 1 / -1;
+}
+
+@media (min-width: 600px) {
+  .details {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 1024px) {
+  .details {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.card {
+  background: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(14px);
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  border-radius: 20px;
+
+  padding: 1.4em 1.2em;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  min-height: 180px;
+
+  box-shadow:
+    0 4px 14px rgba(0, 0, 0, 0.18),
+    inset 0 0 0 0 rgba(255, 255, 255, 0);
+  transition: 0.2s ease;
+}
+
+.card:hover {
+  background: rgba(255, 255, 255, 0.12);
+  border-color: rgba(255, 255, 255, 0.25);
+}
+
+.card h4 {
+  opacity: 0.6;
+  font-weight: 600;
+  margin-bottom: 0.8em;
+  min-height: 1.3em;
+}
+.card-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.6em;
+  flex-grow: 1;
 }
