--- a/src/ui/Aside/Aside.css
+++ b/src/ui/Aside/Aside.css
@@ -4,11 +4,13 @@
   align-items: center;
   justify-content: center;
 }
+
 .bar h2 {
   margin-bottom: 1em;
 }
 .aside-city {
-  padding: 1em 5em;
+  padding: 1em;
+  line-height: 120%;
   width: 100%;
   position: relative;
   cursor: pointer;
@@ -30,4 +32,74 @@
 }
 .aside-city.active {
   background-color: #ffffff2a;
+}
+.layout {
+  display: grid;
+  grid-template-columns: 0px 1fr;
+  transition: grid-template-columns 0.35s ease;
+  width: 100%;
+  height: 100%;
+}
+
+.layout.menu-open {
+  grid-template-columns: 20em 1fr;
+}
+
+.sidebar {
+  height: 100%;
+  overflow-y: auto;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(10px);
+  border-right: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 4em 1em;
+}
+
+.layout.menu-open .sidebar {
+  opacity: 1;
+}
+
+.content-wrapper {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
+/* swiper должен быть ВНУТРИ layout и НЕ absolute */
+.swiper-container-fixed {
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 1200px) {
+  /* Грид становится одноколонным */
+  .layout {
+    grid-template-columns: 1fr;
+    position: relative;
+  }
+
+  .layout.menu-open .content-wrapper {
+    pointer-events: none;
+  }
+
+  /* ----- FULLSCREEN SIDEBAR ----- */
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+
+    /* скрыт */
+    transform: translateX(-100%);
+    transition: transform 0.35s ease;
+  }
+
+  /* когда меню открыто */
+  .layout.menu-open .sidebar {
+    transform: translateX(0);
+  }
 }
