--- a/src/ui/Forecast/Forecast.css
+++ b/src/ui/Forecast/Forecast.css
@@ -53,8 +53,8 @@ input[type='range']::-webkit-slider-runnable-track {
 /* Thumb */
 input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
-  height: 0.3em; /* <<< меньше */
-  width: 0.3em; /* <<< меньше */
+  height: 0.5em;
+  width: 0.5em;
   margin-top: -1px;
   background: #fff;
   border-radius: 50%;
