--- a/src/ui/Forecast/Forecast.css
+++ b/src/ui/Forecast/Forecast.css
@@ -43,9 +43,8 @@ input[type='range'] {
   outline: none;
 }
 
-/* Track */
 input[type='range']::-webkit-slider-runnable-track {
-  height: 6px; /* <<< тоньше */
+  height: 6px;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.2));
   border-radius: 999px;
 }
